[project]
name = "java-course-content"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "myst-parser>=4.0.1",
    "python-pptx>=1.0.2",
    "sphinx>=8.2.3",
    "sphinx-autobuild>=2025.8.25",
    "sphinx-rtd-theme>=3.0.2",
    "sphinx-sizzle-theme>=0.1.3",
]
